fix: get rid of overflow

--- a/src/app.css
+++ b/src/app.css
@@ -2,6 +2,10 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+  overflow: hidden;
+}
+
 .loader {
   width: 18px;
   height: 18px;
